@@ -56,6 +56,7 @@ static char *config_map[NUMBER_OF_CONFIG_ENTRIES] = {
     "CMD_EXEC_TIMEOUT",
     //"BLACKLIST",
     "ENABLE_SPA_OVER_HTTP",
+    "ALLOW_ANY_USER_AGENT",
     "ENABLE_TCP_SERVER",
     "TCPSERV_PORT",
     "ENABLE_UDP_SERVER",
