@@ -1,0 +1,2 @@
+ENABLE_SPA_OVER_HTTP        Y;
+ALLOW_ANY_USER_AGENT        Y;
